# mashacv

./: .gitignore  CMakeLists.txt  LICENSE  MashaCV.pro  README  Resources.qrc  colorEdgesDetection.cpp  colorEdgesDetection.h  colordockwidget.cpp  colordockwidget.h  colordockwidget.ui  configure-mingw32-arch  graphicsview.cpp  graphicsview.h  graphicsview.ui  hueWidget.cpp  hueWidget.h  image.cpp  image.h  imageprocessor.cpp  imageprocessor.h  layerdockwidget.cpp  layerdockwidget.h  layerdockwidget.ui  layerlistmodel.cpp  layerlistmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qgraphicsviewextended.cpp  qgraphicsviewextended.h  rangecontrol.cpp  rangecontrol.h  rangecontrol.ui  rangeslider.cpp  res.qrc  resultinfo.cpp  resultinfo.h  resultsdockwidget.cpp  (+6 more)
